Fix scroller inside overlap

--- a/src/style/revgrid.css
+++ b/src/style/revgrid.css
@@ -1,25 +1,25 @@
 .revgrid-host > .revgrid-horizontal,
 .revgrid-host > .revgrid-vertical {
-    margin: 3px;
+    margin: 0; /* Must be 0 so that inset overlap can be calculated */
 }
 .revgrid-host > .revgrid-horizontal > .thumb,
 .revgrid-host > .revgrid-vertical > .thumb {
     box-shadow: 0 0 1px #000;
     border-radius: 4px;
-    margin: 2px;
+    margin: 0; /* Must be 0 so that inset overlap can be calculated */
     transition: opacity 0.5s;
 }
 .revgrid-host > .revgrid-vertical {
-    width: 11px;
-}
-.revgrid-host > .revgrid-vertical > .thumb {
-    right: 0;
     width: 7px;
 }
+.revgrid-host > .revgrid-vertical > .thumb {
+    left: 0;
+    right: 0;
+}
 .revgrid-host > .revgrid-horizontal {
-    height: 11px;
+    height: 7px;
 }
 .revgrid-host > .revgrid-horizontal > .thumb {
+    top: 0;
     bottom: 0;
-    height: 7px;
 }
